--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,3 +1,5 @@
+include ./theme.conf
+
 font_family      	Libertinus Mono
 bold_font        	auto
 italic_font      	auto
@@ -8,27 +10,27 @@ url_style        	curly
 open_url_with    	firefox
 
 window_padding_width 10
-background_opacity  0.8
+background_opacity  1.0
 
-foreground:   #d0d0d0
-background:   #161616
+# foreground:   #d0d0d0
+# background:   #161616
 
-color0       #222222
-color8       #666666
-color1       #e84f4f
-color9       #d23d3d
-color2       #b7ce42
-color10      #bde077
-color3       #fea63c
-color11      #ffe863
-color4       #66aabb
-color12      #aaccbb
-color5       #b7416e
-color13      #e16a98
-color6       #6d878d
-color14      #42717b
-color7       #dddddd
-color15      #cccccc
+# color0       #222222
+# color8       #666666
+# color1       #e84f4f
+# color9       #d23d3d
+# color2       #b7ce42
+# color10      #bde077
+# color3       #fea63c
+# color11      #ffe863
+# color4       #66aabb
+# color12      #aaccbb
+# color5       #b7416e
+# color13      #e16a98
+# color6       #6d878d
+# color14      #42717b
+# color7       #dddddd
+# color15      #cccccc
 
 # clear_all_shortcuts yes
 map kitty_mod+n new_os_window
@@ -52,4 +54,7 @@ map kitty_mod+kp_subtractchannge_font_size all -2.0
 map kitty_mod+backspace change_font_size all 0
 
 map ctrl+1 send_text normal hx ~/documents/scripts/python/dpm\r
-map ctrl+g send_text normal lazygit\r
+map ctrl+2 send_text normal cd ~/documents/scripts/python/dpm\r
+map ctrl+3 send_text normal cd ~/documents/notes\r
+map ctrl+z send_text normal zellij\r
+map ctrl+i send_text normal zellij run -f -- lazygit\r
